date text correction on dark mode

--- a/src/components/CommunityChat/index.css
+++ b/src/components/CommunityChat/index.css
@@ -113,6 +113,7 @@
   padding: 1.5rem 0;
   list-style-type: none;
   font-size: 15px;
+  color: var(--darkmode-white);
 }
 
 
@@ -285,7 +286,7 @@
 
 @media screen and (max-width: 600px) {
   .date-separator{
-     font-size: 10px;
+     font-size: 9px;
   }
 
   .chat-msg-text {
